--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="left-mountain"></div>
+    <div class="back-mountain"></div>
+    <div class="sun"></div>
+    <div class="penguin"></div>
+    <div class="ground"></div>
   </body>
 </html>
